src/view/bulletins/snapshots/nifi_lens__view__bulletins__render__tests__bulletins_dedups_identical_stems_across_sources.snap
---
source: src/view/bulletins/render.rs
assertion_line: 788
expression: render_to_string(&mut state)
---
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│[E 4] [W 0] [I 0]   type: All   text: (none)                                                                          │"
"│— 1·2·3 sev · T type · / text · G group: source+msg · M mute · c copy · P pause · R clear —                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins ────────────────────────────────────────────────────────────────────────────────────────────── last <DUR> ago ┐"
"│time            sev   #    source               pg path                  message                                      │"
"│Apr 11 10:14:25 ERROR ×3   ProcA                …root                    boom                                         │"
"│Apr 11 10:14:23 ERROR      ProcB                …root                    crash                                        │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ProcB · …root   1 occurrence · first 10:14:23 · last 10:14:23                                                         │"
"│                                                                                                                      │"
"│ERROR   ProcB[id=b] crash                                                                                             │"
"│                                                                                                                      │"
"│id  src-b   pg  root                                                                                                  │"
"│Enter Browser · g goto · M mute · c copy message · R clear filters                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
