src/view/bulletins/snapshots/nifi_lens__view__bulletins__render__tests__bulletins_empty.snap
---
source: src/view/bulletins/render.rs
assertion_line: 586
expression: render_to_string(&mut state)
---
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│[E 0] [W 0] [I 0]   type: All   text: (none)                                                                          │"
"│— 1·2·3 sev · T type · / text · G group: source+msg · M mute · c copy · P pause · R clear —                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins ───────────────────────────────────────────────────────────────────────────────────────────────── loading… ┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                waiting for bulletins…                                                │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
