src/view/bulletins/snapshots/nifi_lens__view__bulletins__render__tests__bulletins_filtered_severity_only_errors.snap
---
source: src/view/bulletins/render.rs
assertion_line: 667
expression: render_to_string(&mut state)
---
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│[E 2] [W 1] [I 1]   type: All   text: (none)                                                                          │"
"│— 1·2·3 sev · T type · / text · G group: source+msg · M mute · c copy · P pause · R clear —                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins ────────────────────────────────────────────────────────────────────────────────────────────── last <DUR> ago ┐"
"│time            sev   #    source               pg path                  message                                      │"
"│Apr 11 10:14:20 ERROR      C                    …root                    error one                                    │"
"│Apr 11 10:14:22 ERROR      D                    …root                    error two                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│D · …root   1 occurrence · first 10:14:22 · last 10:14:22                                                             │"
"│                                                                                                                      │"
"│ERROR   error two                                                                                                     │"
"│                                                                                                                      │"
"│id  src-4   pg  root                                                                                                  │"
"│Enter Browser · g goto · M mute · c copy message · R clear filters                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
