src/view/bulletins/snapshots/nifi_lens__view__bulletins__render__tests__bulletins_paused_with_badge.snap
---
source: src/view/bulletins/render.rs
assertion_line: 696
expression: render_to_string(&mut state)
---
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│[E 4] [W 0] [I 0]   type: All   text: (none)   +7 new                                                                 │"
"│— 1·2·3 sev · T type · / text · G group: source+msg · M mute · c copy · P pause · R clear —                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins ────────────────────────────────────────────────────────────────────────────────────────────── last <DUR> ago ┐"
"│time            sev   #    source               pg path                  message                                      │"
"│Apr 11 10:14:10 ERROR      A                    …root                    one                                          │"
"│Apr 11 10:14:12 ERROR      B                    …root                    two                                          │"
"│Apr 11 10:14:14 ERROR      C                    …root                    three                                        │"
"│Apr 11 10:14:16 ERROR      D                    …root                    four                                         │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│B · …root   1 occurrence · first 10:14:12 · last 10:14:12                                                             │"
"│                                                                                                                      │"
"│ERROR   two                                                                                                           │"
"│                                                                                                                      │"
"│id  src-2   pg  root                                                                                                  │"
"│Enter Browser · g goto · M mute · c copy message · R clear filters                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
