src/view/bulletins/snapshots/nifi_lens__view__bulletins__render__tests__bulletins_seeded_all_on.snap
---
source: src/view/bulletins/render.rs
assertion_line: 635
expression: render_to_string(&mut state)
---
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│[E 2] [W 1] [I 2]   type: All   text: (none)                                                                          │"
"│— 1·2·3 sev · T type · / text · G group: source+msg · M mute · c copy · P pause · R clear —                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins ────────────────────────────────────────────────────────────────────────────────────────────── last <DUR> ago ┐"
"│time            sev   #    source               pg path                  message                                      │"
"│Apr 11 10:14:10 INFO       GenerateFlowFile     …root                    1 file generated                             │"
"│Apr 11 10:14:12 WARN       UpdateAttribute      …root                    expression evaluated to empty string         │"
"│Apr 11 10:14:20 ERROR      PutKafka             …root                    NotLeaderForPartitionException: server is not│"
"│Apr 11 10:14:21 INFO       AvroReader           …root                    reader initialized                           │"
"│Apr 11 10:14:22 ERROR      PutDatabaseRecord    …root                    connection refused: database unreachable     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│PutDatabaseRecord · …root   1 occurrence · first 10:14:22 · last 10:14:22                                             │"
"│                                                                                                                      │"
"│ERROR   connection refused: database unreachable                                                                      │"
"│                                                                                                                      │"
"│id  src-5   pg  root                                                                                                  │"
"│Enter Browser · g goto · M mute · c copy message · R clear filters                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
