src/view/bulletins/snapshots/nifi_lens__view__bulletins__render__tests__bulletins_text_input_active.snap
---
source: src/view/bulletins/render.rs
assertion_line: 748
expression: render_to_string(&mut state)
---
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│[E 1] [W 0] [I 1]   type: All   text: io_  (was: io)                                                                  │"
"│Enter commit · Esc cancel                                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins ────────────────────────────────────────────────────────────────────────────────────────────── last <DUR> ago ┐"
"│time            sev   #    source               pg path                  message                                      │"
"│Apr 11 10:14:10 ERROR      PutKafka             …root                    IOException: timeout                         │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│PutKafka · …root   1 occurrence · first 10:14:10 · last 10:14:10                                                      │"
"│                                                                                                                      │"
"│ERROR   IOException: timeout                                                                                          │"
"│                                                                                                                      │"
"│id  src-1   pg  root                                                                                                  │"
"│Enter Browser · g goto · M mute · c copy message · R clear filters                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
